tweaks for pyLoad, refs #6

--- a/config/includes.chroot/srv/www/index.html
+++ b/config/includes.chroot/srv/www/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h2>Downloaders</h2>
-        <a href='/transmission/'>Transmission</a>
-        <a href='/pyload/'>pyLoad</a>
+        <a href='/transmission'>Transmission</a>
+        <a href='http://treasurebox.local:9000/'>pyLoad</a>
     </body>
 </html>
