first pass at adding plex

--- a/config/includes.chroot/srv/www/index.html
+++ b/config/includes.chroot/srv/www/index.html
@@ -3,8 +3,11 @@
         <title>Treasure Box</title>
     </head>
     <body>
+        <h1>Welcome to your TreasureBox</h1>
+        <h2>Services</h2>
+        <h4><a href='/plex'>Plex</a></h4>
         <h2>Downloaders</h2>
-        <a href='/transmission'>Transmission</a>
-        <a href='http://treasurebox.local:9000/'>pyLoad</a>
+        <h4><a href='/transmission'>Transmission</a></h4>
+        <h4><a href='http://treasurebox.local:9000/'>pyLoad</a></h4>
     </body>
 </html>
