--- a/config/includes.chroot/srv/www/index.html
+++ b/config/includes.chroot/srv/www/index.html
@@ -8,6 +8,7 @@
         <h4><a href='/plex'>Plex</a></h4>
         <h2>Downloaders</h2>
         <h4><a href='/transmission'>Transmission</a></h4>
+        You may find <a href="https://chrome.google.com/webstore/detail/remote-torrent-adder/oabphaconndgibllomdcjbfdghcmenci?hl=en">Remote Torrent Adder</a> useful.
         <h4><a href='http://treasurebox.local:9000/'>pyLoad</a></h4>
     </body>
 </html>
